--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,7 @@
 		<meta name="generator" content="Jekyll v{{ jekyll.version }}">
 
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400,400italic,600,600italic,700,700italic|Inconsolata:400,700">
+		<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
 	</head>
@@ -33,7 +34,7 @@
 				</ul>
 
 				<ul>
-					{% assign grouped = site.docs | group_by: 'category' %}
+					{% assign grouped = site.docs | sort: 'order' | group_by: 'category' %}
 					{% for group in grouped %}
 						<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
 							{% assign items = group.items | sort: 'order' %}
@@ -45,6 +46,12 @@
 							</ul>
 						</li>
 					{% endfor %}
+				</ul>
+
+				<ul>
+					<li class="nav-item top-level">
+						<a class="github-link" href="https://github.com/cedadev/esgf-docker">esgf-docker on GitHub</a>
+					</li>
 				</ul>
 			</nav>
 		</header>
