--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -249,6 +249,8 @@ nav > ul {
 		display: block;
 	}
 
+	&.current .current { background-color: #e6e6e6; }
+
 	&.current > a,
 	> a:active,
 	> a:hover {
@@ -259,6 +261,16 @@ nav > ul {
 		line-height: 1.5;
 		font-weight: 600;
 		padding-left: $space;
+	}
+
+	&.top-level > a.github-link {
+		height: 25px;
+		line-height: 25px;
+		padding-left: $space + 32px;
+		background-image: url("../images/GitHub-Mark-32px.png");
+		background-size: 25px 25px;
+		background-repeat: no-repeat;
+		background-position: $space $space / 2;
 	}
 }
 
