Update documentation to reflect current state

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -53,7 +53,7 @@
 
 				<ul>
 					<li class="nav-item top-level">
-						<a class="github-link" href="https://github.com/cedadev/esgf-docker">esgf-docker on GitHub</a>
+						<a class="github-link" href="https://github.com/ESGF/esgf-docker">esgf-docker on GitHub</a>
 					</li>
 				</ul>
 			</nav>
