--- a/deploy/ansible/roles/proxy/templates/proxy.conf.j2
+++ b/deploy/ansible/roles/proxy/templates/proxy.conf.j2
@@ -27,4 +27,21 @@ server {
     }
     {% endif %}
     {% endif %}
+
+    {% if 'index' in group_names %}
+    {% if solr_enabled %}
+    # We only want to permit access to the replication handler for each core from outside
+    location ~ ^/solr/[a-z]+/replication {
+        include /etc/nginx/includes/proxy_params.conf;
+        proxy_pass http://solr-slave:8983;
+    }
+    {% endif %}
+
+    {% if search_enabled %}
+    location /esg-search {
+        include /etc/nginx/includes/proxy_params.conf;
+        proxy_pass http://search:8080;
+    }
+    {% endif %}
+    {% endif %}
 }
