Add stats server to Ansible playbook

--- a/deploy/ansible/roles/data/templates/stats.conf.j2
+++ b/deploy/ansible/roles/data/templates/stats.conf.j2
@@ -68,6 +68,12 @@ filter {
     }
 }
 output {
+    lumberjack {
+        codec => json
+        hosts => ["{{ logstash_stats_server }}"]
+        port => {{ logstash_stats_port }}
+        ssl_certificate => "/etc/logstash/certs/lumberjack.cert"
+    }
     stdout {
         codec => rubydebug
     }
