fixed allowed_projects setting in the deploy/ansible/roles/index/templates/esgf_wgetapi_allowed_projects.json.j2, and make esgf-wget DEBUG to be settable

--- a/deploy/ansible/roles/index/templates/esgf_wgetapi_config.j2
+++ b/deploy/ansible/roles/index/templates/esgf_wgetapi_config.j2
@@ -1,7 +1,7 @@
 [django]
 
 # SECURITY WARNING: don't run with debug turned on in production!
-DEBUG = False
+DEBUG = {{ wget_api.debug }}
 
 ALLOWED_HOSTS = {{ wget_api.allowed_hosts }} 
 
