--- a/deploy/ansible/roles/index/templates/esgf_wgetapi_allowed_projects.json.j2
+++ b/deploy/ansible/roles/index/templates/esgf_wgetapi_allowed_projects.json.j2
@@ -1,3 +1,3 @@
 {
-    "allowed_projects": {{ wget_api.allowed_projects | list }}
+    "allowed_projects": ["{{ wget_api.allowed_projects | join('", "') }}"]
 }
