--- a/deploy/ansible/roles/proxy/templates/ssl.proxy.conf.j2
+++ b/deploy/ansible/roles/proxy/templates/ssl.proxy.conf.j2
@@ -31,7 +31,7 @@ server {
 
     ssl_stapling on;
     ssl_stapling_verify on;
-    ssl_trusted_certificate {{ ssl_certificate_path }};
+    ssl_trusted_certificate /etc/nginx/ssl/proxy.crt;
 
     # Enable HSTS (HTTP Strict Transport Security) to avoid ssl stripping
     # https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
