Added a new server block to handle incoming http request on port 8081.
Allow the server to redirect http connections over port 80:8081 to the desired port 443:8080. This is achieved by sending a 301 response along with the https URI.

--- a/deploy/ansible/roles/proxy/templates/ssl.proxy.conf.j2
+++ b/deploy/ansible/roles/proxy/templates/ssl.proxy.conf.j2
@@ -1,4 +1,11 @@
 # HTTP and HTTPS server blocks that proxy to the other containers running on this host
+server {
+  listen 8081 default_server;
+
+    server_name _;
+
+    return 301 https://$host$request_uri;
+}
 
 server {
     listen 8080 ssl http2 default_server;
