--- a/deploy/ansible/roles/proxy/templates/ssl.proxy.conf.j2
+++ b/deploy/ansible/roles/proxy/templates/ssl.proxy.conf.j2
@@ -1,3 +1,10 @@
+{% macro auth_check() -%}
+        error_page 401 = @error401;
+        auth_request /verify;
+        auth_request_set $username $upstream_http_x_username;
+        auth_request_set $sid $upstream_http_x_session;
+{%- endmacro %}
+
 # HTTP and HTTPS server blocks that proxy to the other containers running on this host
 server {
     listen 8080 default_server;
@@ -25,11 +32,46 @@ server {
         return 404;
     }
 
+    {% if auth_enabled %}
+    location /verify {
+        set $query '';
+        if ($request_uri ~* "[^\?]+\?(.*)$") {
+            set $query $1;
+        }
+
+        proxy_pass http://auth:8080/verify/?next=$scheme://$http_host$http_port$request_uri;
+        proxy_pass_request_body off;
+
+        proxy_set_header Content-Length '0';
+        proxy_set_header Host $host;
+        proxy_set_header X-Origin-URI $request_uri;
+        proxy_set_header X-Origin-Query $query;
+        proxy_set_header X-Forwarded-Host $host;
+    }
+
+    location /login {
+        proxy_pass http://auth:8080/login;
+        proxy_pass_request_body off;
+
+        proxy_set_header Content-Length '0';
+        proxy_set_header Host $host;
+        proxy_set_header X-Origin-URI $request_uri;
+        proxy_set_header X-Origin-Query $query;
+        proxy_set_header X-Forwarded-Host $host;
+    }
+
+    location @error401 {
+        return 302 https://$host/login;
+    }
+    {% endif %}
+
     {% if 'data' in group_names %}
     {% if thredds_enabled %}
     location /thredds {
         include /etc/nginx/includes/proxy_params.conf;
         proxy_pass http://thredds:8080;
+
+        {% if auth_enabled %}{{ auth_check() }}{% endif %}
     }
     {% endif %}
 
@@ -37,6 +79,8 @@ server {
     location /thredds/fileServer {
         include /etc/nginx/includes/proxy_params.conf;
         proxy_pass http://fileserver:8080;
+
+        {% if auth_enabled %}{{ auth_check() }}{% endif %}
     }
     {% endif %}
     {% endif %}
@@ -47,6 +91,8 @@ server {
     location ~ ^/solr/[a-z]+/replication {
         include /etc/nginx/includes/proxy_params.conf;
         proxy_pass http://solr-slave:8983;
+
+        {% if auth_enabled %}{{ auth_check() }}{% endif %}
     }
     {% endif %}
 
@@ -54,6 +100,8 @@ server {
     location /esg-search {
         include /etc/nginx/includes/proxy_params.conf;
         proxy_pass http://search:8080;
+
+        {% if auth_enabled %}{{ auth_check() }}{% endif %}
     }
     {% endif %}
     {% endif %}
