Fixed bug in HTTP config

--- a/deploy/ansible/roles/proxy/templates/proxy.conf.j2
+++ b/deploy/ansible/roles/proxy/templates/proxy.conf.j2
@@ -48,7 +48,7 @@ server {
     }
 
     location @error401 {
-        return 302 https://$host/login;
+        return 302 http://$host/login;
     }
     {% endif %}
 
