--- a/deploy/ansible/roles/data/templates/fileserver.conf.j2
+++ b/deploy/ansible/roles/data/templates/fileserver.conf.j2
@@ -14,6 +14,11 @@ server {
         return 404;
     }
 
+    # Health check
+    location /healthcheck {
+        return 200 'OK';
+    }
+
     # Create a location block for each dataset
     {% for dataset in data_datasets %}
     location /thredds/fileServer/{{ dataset.path }}/ {
