refactored url path

--- a/deploy/ansible/roles/data/templates/fileserver.conf.j2
+++ b/deploy/ansible/roles/data/templates/fileserver.conf.j2
@@ -15,8 +15,8 @@ server {
     }
 
     # Health check
-    location /healthcheck {
-        return 200 'OK';
+    location /thredds/fileServer/healthcheck {
+        return 200;
     }
 
     # Create a location block for each dataset
