Updated health check endpoints and added a second at /health

--- a/deploy/ansible/roles/data/templates/fileserver.conf.j2
+++ b/deploy/ansible/roles/data/templates/fileserver.conf.j2
@@ -15,7 +15,10 @@ server {
     }
 
     # Health check
-    location /thredds/fileServer/healthcheck {
+    location /health {
+        return 200;
+    }
+    location /thredds/fileServer/health {
         return 200;
     }
 
